@- Added ability to use Perl-style ${n} subpattern references in the @  replacement string for preg_replace(). Takes care of bug #18442. (Andrei)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@95479 c90b9560-bf6c-de11-be94-00142212c4b1